--- a/Client/Dt.Sample/ListView/LvGroupTemplate.xaml
+++ b/Client/Dt.Sample/ListView/LvGroupTemplate.xaml
@@ -2,23 +2,38 @@
     x:Class="Dt.Sample.LvGroupTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    Home="列表,属性">
+    xmlns:a="using:Dt.Base">
 
     <a:Main>
         <a:Tabs>
             <a:Tab Title="列表">
-                <a:Lv x:Name="_lv" SelectionMode="None" ShowItemBorder="False" />
+                <a:Lv x:Name="_lv">
+                    <DataTemplate>
+                        <StackPanel Padding="10">
+                            <a:Dot ID="xm" />
+                            <StackPanel Orientation="Horizontal" >
+                                <TextBlock Text="身高" Style="{StaticResource 小灰}" VerticalAlignment="Center" />
+                                <a:Dot ID="Shengao" Margin="10,0,0,0" />
+                            </StackPanel>
+                        </StackPanel>
+                    </DataTemplate>
+                    <a:Lv.GroupTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Padding="10">
+                                <TextBlock Text="{Binding Title}" />
+                                <TextBlock Text="人数" Margin="20,0,0,0" />
+                                <TextBlock Text="{Binding Count}" />
+                                <TextBlock Text="平均身高" Margin="20,0,0,0" />
+                                <TextBlock Text="{Binding Average}" />
+                                <TextBlock Text="最高" Margin="20,0,0,0" />
+                                <TextBlock Text="{Binding Max}" />
+                                <TextBlock Text="最矮" Margin="20,0,0,0" />
+                                <TextBlock Text="{Binding Min}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </a:Lv.GroupTemplate>
+                </a:Lv>
             </a:Tab>
         </a:Tabs>
     </a:Main>
-    <a:Pane Pos="Right">
-        <a:Tabs>
-            <a:Tab Title="属性">
-                <a:Fv Data="{Binding ElementName=_lv}">
-                    
-                </a:Fv>
-            </a:Tab>
-        </a:Tabs>
-    </a:Pane>
 </a:Win>
