--- a/Client/Dt.Base/Themes/Styles/ListView.xaml
+++ b/Client/Dt.Base/Themes/Styles/ListView.xaml
@@ -106,25 +106,17 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="lv:GroupRow">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
+                    <StackPanel BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰边框}" Background="Transparent">
                         <Rectangle x:Name="Rect"
                                    Fill="{StaticResource 浅灰边框}"
                                    Height="6"
                                    Margin="0,10,0,0"
                                    IsHitTestVisible="False" />
+                        <TextBlock Text="{TemplateBinding Title}" Margin="20,9,20,9" />
                         <ContentPresenter Content="{TemplateBinding Content}"
-                                          MinHeight="{StaticResource RowOuterHeight}"
-                                          BorderThickness="0,0,0,1"
-                                          BorderBrush="{StaticResource 浅灰边框}"
-                                          Background="Transparent"
                                           HorizontalAlignment="Stretch"
-                                          VerticalAlignment="Stretch"
-                                          Grid.Row="1" />
-                    </Grid>
+                                          VerticalAlignment="Stretch" />
+                    </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
