--- a/Client/Dt.App/File/FolderPage.xaml
+++ b/Client/Dt.App/File/FolderPage.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl
+﻿<a:Nav
     x:Class="Dt.App.File.FolderPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <UserControl.Resources>
+    <a:Nav.Resources>
         <DataTemplate x:Key="FolderTemplate">
             <Grid Padding="10">
                 <Grid.ColumnDefinitions>
@@ -22,7 +22,7 @@
         <DataTemplate x:Key="FileTemplate">
             <a:FileList Data="{Binding [Info]}" OpenedFile="OnOpenedFile" BorderBrush="Transparent" />
         </DataTemplate>
-    </UserControl.Resources>
+    </a:Nav.Resources>
 
     <a:Lv x:Name="_lv" ItemClick="OnItemClick">
         <a:Ex.Menu>
@@ -35,4 +35,4 @@
             </a:Menu>
         </a:Ex.Menu>
     </a:Lv>
-</UserControl>
+</a:Nav>
