--- a/Client/Dt.App/File/MoveFilePage.xaml
+++ b/Client/Dt.App/File/MoveFilePage.xaml
@@ -1,9 +1,15 @@
-﻿<UserControl
+﻿<a:Nav
     x:Class="Dt.App.File.MoveFilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
+    <a:Nav.Menu>
+        <a:Menu>
+            <a:Mi ID="确认" Icon="正确" Click="OnSelect" />
+        </a:Menu>
+    </a:Nav.Menu>
+    
     <a:Lv x:Name="_lv" ItemClick="OnItemClick">
         <DataTemplate>
             <Grid Padding="10">
@@ -19,4 +25,4 @@
             </Grid>
         </DataTemplate>
     </a:Lv>
-</UserControl>
+</a:Nav>
