--- a/Client/Dt.App/File/SearchFilePage.xaml
+++ b/Client/Dt.App/File/SearchFilePage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl
+﻿<a:Nav
     x:Class="Dt.App.File.SearchFilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    Title="搜索">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -16,4 +17,4 @@
             </DataTemplate>
         </a:Lv>
     </Grid>
-</UserControl>
+</a:Nav>
