--- a/Client/Dt.App/File/SelectSearchPage.xaml
+++ b/Client/Dt.App/File/SelectSearchPage.xaml
@@ -1,9 +1,16 @@
-﻿<UserControl
+﻿<a:Nav
     x:Class="Dt.App.File.SelectSearchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    Title="搜索">
 
+    <a:Nav.Menu>
+        <a:Menu>
+            <a:Mi ID="确认" Icon="正确" Click="OnSelect" />
+        </a:Menu>
+    </a:Nav.Menu>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -16,4 +23,4 @@
             </DataTemplate>
         </a:Lv>
     </Grid>
-</UserControl>
+</a:Nav>
