--- a/Client/Dt.App/Home/GroupMenu.xaml
+++ b/Client/Dt.App/Home/GroupMenu.xaml
@@ -1,10 +1,15 @@
-﻿<UserControl
+﻿<a:Nav
     x:Class="Dt.App.Home.GroupMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    xmlns:home="using:Dt.App.Home">
+    xmlns:a="using:Dt.Base">
 
+    <a:Nav.Menu>
+        <a:Menu>
+            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnSearch" />
+        </a:Menu>
+    </a:Nav.Menu>
+    
     <Grid Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -25,4 +30,4 @@
             </DataTemplate>
         </a:Lv>
     </Grid>
-</UserControl>
+</a:Nav>
