--- a/Client/Dt.App/Home/RootMenu.xaml
+++ b/Client/Dt.App/Home/RootMenu.xaml
@@ -1,10 +1,17 @@
-﻿<UserControl
+﻿<a:Nav
     x:Class="Dt.App.Home.RootMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:home="using:Dt.App.Home">
+    Title="开始">
 
+    <a:Nav.Menu>
+        <a:Menu>
+            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnSearch" />
+            <a:Mi x:Name="_miReset" ID="重置常用" Icon="刷新" ShowInPhone="Icon" Click="OnReset" Visibility="Collapsed" />
+        </a:Menu>
+    </a:Nav.Menu>
+    
     <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick">
         <DataTemplate>
             <Grid Padding="15">
@@ -16,4 +23,4 @@
             </Grid>
         </DataTemplate>
     </a:Lv>
-</UserControl>
+</a:Nav>
