--- a/Client/Dt.App/Model/Params/UserParamsMgr.xaml
+++ b/Client/Dt.App/Model/Params/UserParamsMgr.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Home="查找,列表,定义">
+    Home="参数列表">
 
     <a:Pane>
         <a:Tabs>
@@ -18,43 +18,32 @@
     </a:Pane>
     <a:Main>
         <a:Tabs>
-            <a:Tab Title="列表">
-                <a:Lv x:Name="_lv" ItemClick="OnItemClick" ViewMode="Table">
-                    <a:Ex.Menu>
+            <a:Tab>
+                <a:Nav x:Name="_nav" Title="参数列表">
+                    <a:Nav.Menu>
                         <a:Menu>
-                            <a:Mi ID="查看用户设置" Icon="设置" Click="OnUserSetting" />
-                            <a:Mi ID="删除" Icon="删除" Click="OnListDel" />
+                            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnNaviToSearch" />
+                            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
                         </a:Menu>
-                    </a:Ex.Menu>
-                    <a:Cols>
-                        <a:Col ID="ID" Title="参数名" Width="150" />
-                        <a:Col ID="Value" Title="缺省值" Width="150" />
-                        <a:Col ID="Note" Title="参数描述" Width="220" />
-                        <a:Col ID="Ctime" Title="创建时间" />
-                        <a:Col ID="Mtime" Title="修改时间" />
-                    </a:Cols>
-                </a:Lv>
+                    </a:Nav.Menu>
+                    <a:Lv x:Name="_lv" ViewMode="Table">
+                        <a:Ex.Menu>
+                            <a:Menu>
+                                <a:Mi ID="编辑" Icon="编辑" Click="OnEdit" />
+                                <a:Mi ID="查看用户设置" Icon="设置" Click="OnUserSetting" />
+                                <a:Mi ID="删除" Icon="删除" Click="OnListDel" />
+                            </a:Menu>
+                        </a:Ex.Menu>
+                        <a:Cols>
+                            <a:Col ID="ID" Title="参数名" Width="150" />
+                            <a:Col ID="Value" Title="缺省值" Width="150" />
+                            <a:Col ID="Note" Title="参数描述" Width="220" />
+                            <a:Col ID="Ctime" Title="创建时间" Width="150" />
+                            <a:Col ID="Mtime" Title="修改时间" Width="150" />
+                        </a:Cols>
+                    </a:Lv>
+                </a:Nav>
             </a:Tab>
         </a:Tabs>
     </a:Main>
-    <a:Pane Pos="Right">
-        <a:Tabs>
-            <a:Tab Title="定义">
-                <a:Tab.Menu>
-                    <a:Menu>
-                        <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
-                        <a:Mi ID="保存" Icon="保存" Click="OnSave" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
-                        <a:Mi ID="删除" Icon="删除" Click="OnDel" />
-                    </a:Menu>
-                </a:Tab.Menu>
-                <a:Fv x:Name="_fv">
-                    <a:CText ID="ID" Title="参数名" />
-                    <a:CText ID="Value" Title="缺省值" />
-                    <a:CText ID="Note" Title="参数描述" AcceptsReturn="True" RowSpan="2" />
-                    <a:CTip ID="ctime" Title="创建时间" />
-                    <a:CTip ID="mtime" Title="修改时间" />
-                </a:Fv>
-            </a:Tab>
-        </a:Tabs>
-    </a:Pane>
 </a:Win>
