--- a/Client/Dt.Base/Themes/Styles/Win.xaml
+++ b/Client/Dt.Base/Themes/Styles/Win.xaml
@@ -109,6 +109,7 @@
     <Style x:Key="WinTab" TargetType="a:Tab">
         <Setter Property="Foreground" Value="{StaticResource 默认前景}" />
         <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BackButtonVisibility" Value="Collapsed" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="a:Tab">
@@ -179,7 +180,7 @@
                             </Grid.ColumnDefinitions>
                             <!--后退-->
                             <Button x:Name="BackButton"
-                                    Visibility="{TemplateBinding PinButtonVisibility}"
+                                    Visibility="{TemplateBinding BackButtonVisibility}"
                                     Style="{StaticResource 字符按钮}"
                                     Foreground="{StaticResource 默认背景}"
                                     Content="&#xE010;"
@@ -607,9 +608,9 @@
                         </Grid.ColumnDefinitions>
 
                         <!-- Pin -->
-                        <Button x:Name="HeaderButton"
-                                Visibility="{Binding Owner.SelectedItem.PinButtonVisibility, RelativeSource={RelativeSource TemplatedParent}, FallbackValue=Collapsed, TargetNullValue=Collapsed}"
-                                Content="{Binding Owner.SelectedItem.HeaderButtonText, RelativeSource={RelativeSource TemplatedParent}}"
+                        <Button x:Name="BackButton"
+                                Visibility="{Binding Owner.SelectedItem.BackButtonVisibility, RelativeSource={RelativeSource TemplatedParent}, FallbackValue=Collapsed, TargetNullValue=Collapsed}"
+                                Content="&#xE010;"
                                 Style="{StaticResource 字符按钮}"
                                 Foreground="{StaticResource 深灰背景}" />
 
