--- a/Client/Dt.App/File/SelectFilePage.xaml
+++ b/Client/Dt.App/File/SelectFilePage.xaml
@@ -1,10 +1,10 @@
-﻿<a:Nav
+﻿<a:Mv
     x:Class="Dt.App.File.SelectFilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <a:Nav.Resources>
+    <a:Mv.Resources>
         <DataTemplate x:Key="FolderTemplate">
             <Grid Padding="10">
                 <Grid.ColumnDefinitions>
@@ -22,7 +22,7 @@
         <DataTemplate x:Key="FileTemplate">
             <a:FileList Data="{Binding [Info]}" EnableClick="False" BorderBrush="Transparent" />
         </DataTemplate>
-    </a:Nav.Resources>
+    </a:Mv.Resources>
 
     <a:Lv x:Name="_lv" ItemClick="OnItemClick" />
-</a:Nav>
+</a:Mv>
