--- a/Client/Dt.App/Home/GroupMenu.xaml
+++ b/Client/Dt.App/Home/GroupMenu.xaml
@@ -1,15 +1,15 @@
-﻿<a:Nav
+﻿<a:Mv
     x:Class="Dt.App.Home.GroupMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <a:Nav.Menu>
+    <a:Mv.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnSearch" />
         </a:Menu>
-    </a:Nav.Menu>
-    
+    </a:Mv.Menu>
+
     <Grid Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -18,7 +18,7 @@
         <Border BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰边框}" Height="{StaticResource RowOuterHeight}">
             <TextBlock x:Name="_tb" VerticalAlignment="Center" Margin="20,0,20,0" />
         </Border>
-        
+
         <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick" ItemHeight="80" Grid.Row="1">
             <DataTemplate>
                 <Grid Padding="10">
@@ -30,4 +30,4 @@
             </DataTemplate>
         </a:Lv>
     </Grid>
-</a:Nav>
+</a:Mv>
