--- a/Client/Dt.App/Home/RootMenu.xaml
+++ b/Client/Dt.App/Home/RootMenu.xaml
@@ -1,17 +1,17 @@
-﻿<a:Nav
+﻿<a:Mv
     x:Class="Dt.App.Home.RootMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     Title="开始">
 
-    <a:Nav.Menu>
+    <a:Mv.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnSearch" />
             <a:Mi x:Name="_miReset" ID="重置常用" Icon="刷新" ShowInPhone="Icon" Click="OnReset" Visibility="Collapsed" />
         </a:Menu>
-    </a:Nav.Menu>
-    
+    </a:Mv.Menu>
+
     <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick">
         <DataTemplate>
             <Grid Padding="15">
@@ -23,4 +23,4 @@
             </Grid>
         </DataTemplate>
     </a:Lv>
-</a:Nav>
+</a:Mv>
