--- a/Client/Dt.App/Model/Params/EditUserParams.xaml
+++ b/Client/Dt.App/Model/Params/EditUserParams.xaml
@@ -1,17 +1,17 @@
-﻿<a:Nav
+﻿<a:Mv
     x:Class="Dt.App.Model.EditUserParams"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     Title="参数编辑">
 
-    <a:Nav.Menu>
+    <a:Mv.Menu>
         <a:Menu>
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
             <a:Mi ID="保存" Icon="保存" Click="OnSave" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
             <a:Mi ID="删除" Icon="删除" Click="OnDel" />
         </a:Menu>
-    </a:Nav.Menu>
+    </a:Mv.Menu>
 
     <a:Fv x:Name="_fv">
         <a:CText ID="ID" Title="参数名" />
@@ -20,4 +20,4 @@
         <a:CTip ID="ctime" Title="创建时间" />
         <a:CTip ID="mtime" Title="修改时间" />
     </a:Fv>
-</a:Nav>
+</a:Mv>
