--- a/Client/Dt.App/Model/Params/UserParamsList.xaml
+++ b/Client/Dt.App/Model/Params/UserParamsList.xaml
@@ -1,16 +1,16 @@
-﻿<a:Nav
+﻿<a:Mv
     x:Class="Dt.App.Model.UserParamsList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     Title="参数列表">
 
-    <a:Nav.Menu>
+    <a:Mv.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnNaviToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
         </a:Menu>
-    </a:Nav.Menu>
+    </a:Mv.Menu>
     
     <a:Lv x:Name="_lv" ViewMode="Table">
         <a:Ex.Menu>
@@ -28,4 +28,4 @@
             <a:Col ID="Mtime" Title="修改时间" Width="150" />
         </a:Cols>
     </a:Lv>
-</a:Nav>
+</a:Mv>
