--- a/Client/Dt.Base/Structure/ModuleView/SearchNav.xaml
+++ b/Client/Dt.Base/Structure/ModuleView/SearchNav.xaml
@@ -1,4 +1,4 @@
-﻿<a:Nav
+﻿<a:Mv
     x:Class="Dt.Base.SearchNav"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -20,10 +20,14 @@
         <ScrollViewer HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1">
             <StackPanel>
                 <a:CBar Title="常用" />
-                <a:Lv x:Name="_lvFix" />
+                <a:Lv x:Name="_lvFix">
+                    <DataTemplate>
+                        <a:Dot ID="#" Margin="10" />
+                    </DataTemplate>
+                </a:Lv>
                 <a:CBar Title="搜索历史" />
                 <a:Lv x:Name="_lvHis" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
-</a:Nav>
+</a:Mv>
