--- a/Client/Dt.Sample/ModuleView/MvItem.xaml
+++ b/Client/Dt.Sample/ModuleView/MvItem.xaml
@@ -4,13 +4,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
+    <a:Mv.Menu>
+        <a:Menu>
+            <a:Mi x:Name="_mi" ID="功能" Icon="保存" />
+        </a:Menu>
+    </a:Mv.Menu>
+    
     <StackPanel Padding="10" Spacing="10">
-        <TextBlock Text="导航设置：" />
+        <a:CBar Title="导航设置" />
+        <CheckBox x:Name="_cbModal" Content="带遮罩的模式视图" />
         <CheckBox x:Name="_cbInput" Content="包含导航参数" />
         <CheckBox x:Name="_cbResult" Content="包含返回结果" />
-        <CheckBox x:Name="_cbModal" Content="带遮罩的模式视图" />
         <CheckBox x:Name="_cbHideTitle" Content="隐藏标题栏，PhoneUI模式有效" />
         <Button Content="向前导航" Click="OnForward" />
         <Button Content="返回" Click="OnBackward" />
+        <a:CBar Title="对话框" />
+        <CheckBox x:Name="_cbDlgTitle" Content="隐藏对话框标题" />
+        <Button Content="对话框加载Mv" Click="OnShowDlg" />
     </StackPanel>
 </a:Mv>
