--- a/Client/Dt.App/File/SelectFileDlg.xaml
+++ b/Client/Dt.App/File/SelectFileDlg.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    IsPinned="True">
+    IsPinned="True"
+    Title="选择文件">
 
 </a:Dlg>
