--- a/Client/Dt.Base/FileList/Parts/UpdateFileDlg.xaml
+++ b/Client/Dt.Base/FileList/Parts/UpdateFileDlg.xaml
@@ -2,7 +2,8 @@
     x:Class="Dt.Base.FileLists.UpdateFileDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    Title="更新方式">
 
     <StackPanel>
         <a:BtnItem Icon="文件夹" Title="选择更新文件" Click="OnSelect" />
