--- a/Client/Dt.Base/Themes/Styles/Win.xaml
+++ b/Client/Dt.Base/Themes/Styles/Win.xaml
@@ -203,7 +203,9 @@
                         </Grid>
                         <!--内容-->
                         <!--用在win模式的Tabs、phone模式的Tab、Dlg，为Lv Fv等内容提供区域大小-->
-                        <a:SizedPresenter Content="{TemplateBinding Content}" Grid.Row="1" />
+                        <a:SizedPresenter Content="{TemplateBinding Content}"
+                                          ContentTransitions="{TemplateBinding ContentTransitions}"
+                                          Grid.Row="1" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
