--- a/Client/Dt.Sample/ModuleView/MvHome.xaml
+++ b/Client/Dt.Sample/ModuleView/MvHome.xaml
@@ -4,12 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <a:Pane InitWidth="150">
+    <a:Pane InitWidth="200">
         <a:Tabs>
             <a:Tab Title="功能列表">
-                <a:Lv x:Name="_lv" ItemClick="OnMainInfoClick">
+                <a:Lv x:Name="_lv" ItemClick="OnMainInfoClick" ItemHeight="100">
                     <DataTemplate>
-                        <a:Dot ID="Title" Padding="10" />
+                        <StackPanel Padding="10">
+                            <a:Dot ID="Title" />
+                            <a:Dot ID="Desc" Font="小灰" VerticalAlignment="Top" HorizontalAlignment="Left" />
+                        </StackPanel>
                     </DataTemplate>
                 </a:Lv>
             </a:Tab>
